[package]
name = "ashenpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
eframe = { version = "0.35.0", features = ["default"] }
egui_extras = { version = "0.35.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "jpeg"] } # Add the types you want support for
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
